main.css
thead.mid { 
  border-top: solid 1px grey;
}

.label { 
  margin-top: 3px;
}

.listbox { 
  border: solid 1px black;
  background-color: white;
}


.head {
  font-weight: bold;
  font-size: 9pt;
  margin: 2px 0 2px 0;
}

input { 
  height: 10px;
  color: black;
}

div.progress-container { 
  border: 1px solid #ccc; 
  margin: 2px 5px 2px 0; 
  padding: 1px; 
  background: white;
  overflow: hidden;
}

div.progress-container > div.bar { 
  background-color: #ACE97C; 
  height: 12px;
}

div.hint { 
  z-index: 20;
  position: absolute;
  margin-top: 1px;
  visibility: hidden;
  text-align: center;
  color: #060;
}

div.progress-container:hover div.hint { 
  visibility: visible;
}

#main.window { 
  width: 684px; 
}

#Trats, 
#Spells, #Spells table,
#Plots,  #Plots table,
#Quests, #Quests table { 
  width: 200px;
}

#Trats th,             #Trats td             { width: 145px; }
#Trats th:first-child, #Trats td:first-child { width:  55px; }

tr         { height:  15px; }
#Spells    { height: 236px; }
#Inventory { height: 281px; }
#Plots     { height: 147px; }
#Quests    { height: 294px; }


#ExpBar, #ExpBar .hint, 
#PlotBar, #PlotBar .hint,
#QuestBar, #QuestBar .hint { 
  width: 198px;
}

#Equips {
  width: 272px;
}

#Inventory, #Inventory table {
  width: 270px;
}

#Equips th,             #Equips td             { width: 202px; }
#Equips th:first-child, #Equips td:first-child { width:  70px; }

#EncumBar, #EncumBar .hint { 
  width: 268px;
}

#Spells .value { 
 width: 15ex;
}

#TaskBar, #TaskBar .hint { 
  width: 680px;
}

#Quests td, #Plots td { 
  padding-left: 0;
}
 
#Izquierda, #Derecha {
  width: 202px;
}

#Centro {
  width: 274px;
}

